--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,13 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   swipe_to: ^1.0.6
   url_launcher: ^6.3.1
-  youtube_metadata: ^1.0.1
+  # youtube_metadata: ^1.0.1
   video_thumbnail: ^0.5.3
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  firebase_storage: ^12.3.4
+  cloud_firestore: ^5.4.4
+  firebase_ui_auth: ^1.16.0
 
 dev_dependencies:
   flutter_test:
